# comicon

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
comicon/: __init__.py  api.py  base.py  cirtools.py  errors.py  image.py
comicon/common/: __init__.py  cbz.py  metadata.py
comicon/inputs/: __init__.py  cbz.py  cir.py  epub.py  pdf.py
comicon/ir/: __init__.py
comicon/outputs/: __init__.py  cbz.py  cir.py  epub.py  mobi.py  pdf.py
tests/: test_cirtools.py
