[tool.poetry]
name = "comicon"
version = "0.3.0"
description = "A simple comic conversion library between CBZ/EPUB/MOBI/PDF"
authors = ["Daniel Chen <danielchen04@hotmail.ca>"]
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/potatoeggy/comicon"
documentation = "https://github.com/potatoeggy/comicon"
keywords = ["converter", "comic", "cbz", "epub", "pdf", "mobi"]

[tool.poetry.dependencies]
python = ">=3.10"
ebooklib = "^0.18"
pillow = "^9.4.0"
lxml = "^4.9.2"
pypdf = {extras = ["image"], version = "^3.2.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["B", "C", "E", "F", "W"]
ignore = ["B905"]
exclude = ["mandown/ui/*", "build/*"]
target-version = "py310"
line-length = 100

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"mandown/cli.py" = ["B008"]
"tests/*" = ["E501"]
