[tool.poetry]
name = "comicon"
version = "1.3.0"
description = "A simple comic conversion library between CBZ/EPUB/MOBI/PDF"
authors = ["potatoeggy <eggyrules@gmail.com>"]
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/potatoeggy/comicon"
documentation = "https://github.com/potatoeggy/comicon"
keywords = ["converter", "comic", "cbz", "epub", "pdf", "mobi"]

[tool.poetry.dependencies]
python = ">=3.10"
ebooklib = "^0.18"
pillow = "^10.4.0"
lxml = "^5.2.2"
pypdf = { extras = ["image"], version = "^4.3.1" }
python-slugify = "^8.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
mccabe.max-complexity = 18
select = ["B", "C", "E", "F", "I", "W"]
ignore = ["B905"]
exclude = ["build/*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501"]
